--- a/app/src/main/res/layout/activity_bloquery.xml
+++ b/app/src/main/res/layout/activity_bloquery.xml
@@ -23,6 +23,14 @@
 
     <include layout="@layout/content_bloquery" />
 
+    <!--
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_nav_activity_bloquery"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"/>
+        -->
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
