--- a/app/src/main/res/layout/question_item.xml
+++ b/app/src/main/res/layout/question_item.xml
@@ -8,14 +8,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <com.stevensadler.android.bloquery.ui.widget.RobotoTextView
-            style="@style/QuestionTitle"
+        <TextView
             android:id="@+id/tv_question_item_body"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
+            android:textColor="@color/colorPrimaryDark"
+            android:text="Show a Question"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
             android:layout_marginRight="24dp"
             android:layout_marginLeft="24dp"/>
+
 
     </RelativeLayout>
 
