--- a/app/src/main/res/menu/menu_bloquery.xml
+++ b/app/src/main/res/menu/menu_bloquery.xml
@@ -2,6 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ui.activity.BloqueryActivity">
+
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
@@ -13,6 +14,19 @@
         android:orderInCategory="100"
         android:title="@string/action_logout"
         app:showAsAction="never"
-        android:onClick="onMenuLogoutClick"
-        />
+        android:onClick="onMenuLogoutClick" />
+
+    <item
+        android:id="@+id/action_refresh_data"
+        android:orderInCategory="100"
+        android:title="@string/action_refresh_data"
+        app:showAsAction="never"
+        android:onClick="onMenuRefreshDataClick" />
+
+    <item
+        android:id="@+id/action_add_question"
+        android:orderInCategory="100"
+        android:title="@string/action_add_question"
+        app:showAsAction="always"
+        android:onClick="onMenuAddQuestionClick" />
 </menu>
