--- a/app/src/main/res/menu/menu_bloquery.xml
+++ b/app/src/main/res/menu/menu_bloquery.xml
@@ -17,6 +17,13 @@
         android:onClick="onMenuLogoutClick" />
 
     <item
+        android:id="@+id/action_profile"
+        android:orderInCategory="100"
+        android:title="@string/action_profile"
+        app:showAsAction="never"
+        android:onClick="onMenuProfileClick" />
+
+    <item
         android:id="@+id/action_refresh_data"
         android:orderInCategory="100"
         android:title="@string/action_refresh_data"
@@ -27,6 +34,6 @@
         android:id="@+id/action_add_question"
         android:orderInCategory="100"
         android:title="@string/action_add_question"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         android:onClick="onMenuAddQuestionClick" />
 </menu>
