--- a/app/src/main/res/layout/answer_item.xml
+++ b/app/src/main/res/layout/answer_item.xml
@@ -8,17 +8,29 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/tv_answer_item_body"
+        <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/colorPrimaryDark"
-            android:text="Show an Answer"
-            android:layout_marginTop="12dp"
-            android:layout_marginBottom="12dp"
-            android:layout_marginRight="24dp"
-            android:layout_marginLeft="24dp"/>
+            android:layout_height="wrap_content">
 
+            <ImageView
+                android:id="@+id/iv_answer_item_image"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:paddingBottom="10dp"/>
+
+            <TextView
+                android:id="@+id/tv_answer_item_body"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorPrimaryDark"
+                android:text="Show an Answer"
+                android:layout_marginTop="12dp"
+                android:layout_marginBottom="12dp"
+                android:layout_marginRight="24dp"
+                android:layout_marginLeft="24dp"/>
+
+        </LinearLayout>
 
     </RelativeLayout>
 
