--- a/app/src/main/res/layout/answer_item.xml
+++ b/app/src/main/res/layout/answer_item.xml
@@ -1,37 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="16dp">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <ImageView
+        android:id="@+id/iv_answer_item_image"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:scaleType="centerCrop"/>
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+    <TextView
+        android:id="@+id/tv_answer_item_body"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorPrimaryDark"
+        android:text="Show an Answer"
+        android:layout_toRightOf="@+id/iv_answer_item_image"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"/>
 
-            <ImageView
-                android:id="@+id/iv_answer_item_image"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:paddingBottom="10dp"/>
+    <TextView
+        android:id="@+id/tv_answer_vote_count"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="sample"
+        android:textColor="@color/colorPrimaryDark"
+        android:layout_alignParentRight="true"/>
 
-            <TextView
-                android:id="@+id/tv_answer_item_body"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@color/colorPrimaryDark"
-                android:text="Show an Answer"
-                android:layout_marginTop="12dp"
-                android:layout_marginBottom="12dp"
-                android:layout_marginRight="24dp"
-                android:layout_marginLeft="24dp"/>
+    <CheckBox
+        android:id="@+id/cb_answer_favorite_star"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:button="@drawable/btn_star_checkbox"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/tv_answer_vote_count"/>
 
-        </LinearLayout>
+</RelativeLayout>
 
-    </RelativeLayout>
-
-</LinearLayout>
