user story 9 complete and button polish

--- a/app/src/main/res/layout/answer_item.xml
+++ b/app/src/main/res/layout/answer_item.xml
@@ -7,6 +7,7 @@
 
     <ImageView
         android:id="@+id/iv_answer_item_image"
+        android:background="@drawable/default_avatar"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:scaleType="centerCrop"/>
