--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -47,8 +47,10 @@
 
         <ImageView
             android:id="@+id/iv_fragment_profile_image"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:background="@drawable/default_avatar"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:scaleType="centerCrop"
             android:gravity="center_horizontal"
             android:layout_gravity="center_horizontal" />
 
